crates/db-read-lockdown/tests/ui/writer_types_do_not_resolve.rs
fn main() {
    let _ = std::any::type_name::<db_read::WriteConn<'_>>();
    let _ = std::any::type_name::<db_read::WriteTxn<'_>>();
    let _ = std::any::type_name::<db_read::WriterPool>();
}
